# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [Unreleased]

### Added

- Há uma nova badge entre nós... Use `/perfil` ou `/personalizar badges` e veja se você a possui ;)

### Changed

- Paramos de usar o discriminator para mostrar o username de usuários que já foram migrados para o novo sistema do Discord. Essa mudança pode ser vista em lugares como o ranking semanal de caças e `/carteira`

### Removed

- O evento de aniverśario terminou! As coisas voltaram ao normal.

## [5.4.1-EVENT] - 2023-05-05

### Added

- Iniciado o evento de aniversário de 3 anos da Menhera!

### Changed

- Os votos dão MUITO mais prêmios. `/cooldowns`
- As chances de caça estão melhores! Use `/caçar tipo:probabilidades` para mais informações. _É possível caçar 2 deuses de uma vez só ^^_
- Preços de temas estão MUITO mais baratos! Veja os descontos em `/loja preços comprar tipo:cores`, `/loja preços comprar tipo:rolls` e `/loja comprar temas`.
- Comandos estão diferentes... Use e veja!

## [5.4.0] - 2023-05-04

### Added

- Foi adicionado duas novas badges! `2 anos com a Menhera` e `3 anos com a Menhera`. Essa badge é dada para quem usa a Menhera a mais de 2/3 anos! O tipo dessa badge é *UNICA*, somente uma aparecerá no perfil por vez: 1, 2 ou 3 anos com a Menhera.

## [5.3.1] - 2023-04-30

### Changed

- O comando `/presentear` foi renomado para `/pix`! Sugerido por: Luizinn_#0258 (928461486173618176)

### Fixed

- O preview de temas de perfil no `/loja comprar temas` foi arrumado!

## [5.3.0] - 2023-04-20

### Added

- Adicionado uma referência ao comando /itens ao receber um drop de item mágico.

### Changed

- O limite de itens mágicos foi aumentado para **2**. Agora é possível combar o item de cooldown reduzido com o de chances aumentadas!

## [5.2.6] - 2023-04-19
