@@ -10,6 +10,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/
 ### Added
 
 - Há uma nova badge entre nós... Use `/perfil` ou `/personalizar badges` e veja se você a possui ;)
+- Agora é possível apostar **caças** no `/coinflip`. As apostas em caças são converdidas em estrelinhas para o `/estatísticas coinflip`. - Sugerido por Zip#7558 (510638095910305794)
 
 ### Changed
 
